--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -74,7 +74,7 @@
         var tD = this._filter(defectData);
 
         var tSt = tS.reduce(add, 0);
-        var tDt = tS.reduce(add, 0);
+        var tDt = tD.reduce(add, 0);
 
         function add(a, b) {
             return a + b;
@@ -88,9 +88,9 @@
             '<tbody>' +
             '<tr>' +
             '<td class="table-row-header flex1">Schedule State</td>' +
-            '<td class="table-row-header-label-story">User Stories (' + tSt + ')</td>' +
+            '<td class="table-row-header-label-story">US (' + tSt + ')</td>' +
             '<td class="table-row-header-percentage-story">%</td>' +
-            '<td class="table-row-header-label-defect">Defects (' + tDt + ')</td>' +
+            '<td class="table-row-header-label-defect">DE (' + tDt + ')</td>' +
             '<td class="table-row-header-percentage-defect">%</td>' +
             '</tr>' +
             '<tr>' +
